<resources>
    <string name="app_name">Viato</string>
    <string name="app_description">Rent,Share books in Powai</string>

    <!--Navigation Items-->
    <string name="nav_home">Home</string>
    <string name="nav_my_books">My Books</string>
    <string name="nav_lends">My Rents</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_help">Help &amp; Feedback</string>
    <string name="nav_faq">FAQ</string>

    <!--Menu-->
    <string name="menu_search">Title, Author, ISBN</string>
    <string name="menu_barcode">Scan barcode</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_move_to">Move to list</string>
    <string name="menu_remove">Remove from list</string>

    <!--Sharing-->
    <string name="share">Share</string>
    <string name="share_via">Share via</string>

    <string name="action_cart">My Cart</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Add to wish list</string>
    <string name="action_help_and_support">Help</string>

    <string name="not_in_read">Add to I read</string>
    <string name="in_i_read">Remove from I read</string>
    <string name="not_in_owe">Add to I owe</string>
    <string name="in_i_owe">Remove from I owe</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>

    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="profile_pic">Profile Picture</string>

    <string name="skip_button">Skip</string>
    <string name="create_button">Create</string>
    <string name="finish_button">Finish</string>

    <string name="try_again">Try Again</string>
    <string name="error">Error</string>

    <string name="cover_image">Cover Image</string>

    <string name="change">Change</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="message_no_network">Please check your network connection</string>
    <string name="update_app">Update App</string>
    <string name="select_location">Select Location</string>
    <string name="fetching_message">Fetching data…</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="sms_not_send">Error sending SMS</string>
    <string name="retro_error">Network Error</string>
    <string name="api_error">Something went wrong&#8230; Please try again later</string>
    <string name="label_enter_sms">Enter code received in SMS</string>
    <string name="verify_manually">Verify</string>
    <string name="send_sms">Verify by sms</string>
    <string name="fetching_location">Getting your location…</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="take_photo_choices">
        <item>Capture from Camera</item>
        <item>Add from Gallery</item>
        <item>Import from FACEBOOK</item>
        <item>Import from GOOGLE</item>
    </string-array>

    <string name="just_now">Just now</string>
    <string name="seconds_ago">%ds ago</string>
    <string name="minutes_ago">%dm ago</string>
    <string name="hours_ago">%dh ago</string>
    <string name="days_ago">%dd ago</string>
    <string name="weeks_ago">%dw ago</string>
    <string name="long_time_ago">Long time ago</string>

    <string name="confirm">Confirm</string>
    <string name="add_an_image">Add a photo</string>
    <string name="update_image">Update photo</string>

    <!--Activity Titles-->
    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_my_books">My Books</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_checkout">My Cart</string>
    <string name="title_activity_address_list">Address</string>
    <string name="title_activity_book_detail">Book Details</string>
    <string name="title_activity_previous_orders">Previous Orders</string>

    <string name="lorem">Lorem ipsum <strike> crossed </strike> dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="rating_dialog_title">Your Review</string>

    <!--Search-->
    <string name="search_hint">Search by Title, Author, ISBN</string>

    <!--Fragments & Activities specific-->
    <!--Login Fragment-->
    <string-array name="title_array">
        <item>Rent books</item>
        <item>Lend &amp; Earn !</item>
        <item>Free doorstep delivery</item>
    </string-array>
    <string-array name="subtitle_array">
        <item>Thousands of books to read at the lowest prices</item>
        <item>Give your old books to the ones who need them and earn money </item>
        <item>Order today and get it delivered to your doorstep by tomorrow!.</item>
    </string-array>

    <string name="enter_mobile_number">Mobile Number</string>
    <string name="error_mobile_input">Enter a 10 digit indian mobile number</string>
    <string name="error_email_input">Enter a valid email</string>
    <string name="error_otp_input">Enter the 4 digit otp received in the sms </string>

    <!--LoginConfirm Fragment-->
    <string name="valid_email">Select your email</string>
    <string name="set_email">Your Email address</string>
    <string name="complete">Complete</string>
    <string name="wait_for_sms">Please wait while we send an OTP in an SMS to verify your mobile</string>
    <string name="verify">VERIFY</string>
    <string name="resend">RESEND</string>

    <string name="book_id">book_id</string>

    <!-- Order status-->
    <string name="order_placed">Order Placed</string>
    <string name="order_delivered">Order Received</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="order_extended">Order Extended</string>
    <string name="order_returned">Order Fulfilled</string>

    <!-- Important dates copy-->
    <string name="order_delivery_date">Est. Delivery</string>
    <string name="order_return_date">Return Date</string>
    <string name="order_canceled_date">Canceled On</string>
    <string name="order_returned_date">Returned On</string>

    <string name="share_string_template">Checkout the book, %1$s on %2$s. %3$s</string>

    <string name="coming_soon">Coming Soon!</string>
    <string name="title_activity_success">Success</string>

    <string name="trending">Trending</string>

    <!--Regex-->
    <string name="regex_mobile_number">^[0-9]{10}$</string>
    <string name="regex_otp">^[0-9]{4}$</string>
    <string name="regex_email">android.util.Patterns.EMAIL_ADDRESS</string>

    <!--wish list-->
    <string name="add_to_wish_list">Add to wishlist</string>
    <string name="added_to_wish_list">Added to wishlist</string>
    <string name="removed_from_wish_list">Removed from wishlist</string>

    <string name="add_to_cart">Rent</string>

    <!--show more/less-->
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>

    <string name="undo">Undo</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="due_to">due to </string>

    <string name="extend">Extend</string>
    <string name="Return">Return</string>
    <string name="rate_book">Rate this book</string>


    <!-- Screen Names -->
    <string name="home_activity">Home Activity</string>
    <string name="barcode_scanner_activity">Barcode Scanner Activity</string>
    <string name="book_search_activity">Book Search Activity</string>
    <string name="notification_activity">Notification Activity</string>
    <string name="success_activity">Success Activity</string>

    <string name="book_detail_fragment">Book Detail Fragment</string>
    <string name="category_books_fragment">Category Books Fragment</string>
    <string name="checkout_fragment">Checkout Fragment</string>
    <string name="booking_list_fragment">Bookings List Fragment</string>
    <string name="booking_detail_fragment">Bookings Detail Fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="login_confirm_fragment">Login Confirm Fragment</string>

    <!-- Availability status-->
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_faq">FAQ</string>
</resources>
