<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="99"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_share"/>

    <item android:id="@+id/action_cart"
          android:title="@string/action_cart"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_cart"/>

    <item android:id="@+id/action_i_read"
        android:title="@string/not_in_read"
        android:orderInCategory="101"
        app:showAsAction="never"/>

    <item android:id="@+id/action_i_owe"
        android:title="@string/not_in_owe"
        android:orderInCategory="102"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="103"
          app:showAsAction="never"/>
</menu>