<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:checked="true"
            android:title="@string/nav_home"
            android:orderInCategory="@integer/nav_item_home"/>
        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_book_black"
            android:title="@string/nav_my_books"
            android:orderInCategory="@integer/nav_item_my_books"/>
        <item
            android:id="@+id/nav_lends"
            android:icon="@drawable/ic_history_black"
            android:title="@string/nav_lends"
            android:orderInCategory="@integer/nav_item_lends"/>
        <!--<item-->
            <!--android:id="@+id/nav_wallet"-->
            <!--android:icon="@drawable/ic_home"-->
            <!--android:title="@string/nav_wallet" />-->
        <!--<item-->
            <!--android:id="@+id/nav_profile"-->
            <!--android:icon="@drawable/ic_home"-->
            <!--android:title="@string/nav_profile" />-->
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/nav_notifications"
            android:orderInCategory="@integer/nav_item_notifications"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black"
            android:title="@string/nav_help"
            android:orderInCategory="@integer/nav_item_help"/>
    </group>
</menu>