<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.viato.app.ui.activities.MainActivity">
    <item
        android:id="@+id/menu_cart"
        android:title="@string/action_cart"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart_white"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
