<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/otp_verification_animator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:gravity="center"
        android:layout_above="@+id/btn_submit">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wait_for_sms"
                style="@style/Headings.H3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/otp_input_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center">
            <EditText
                android:inputType="numberDecimal"
                android:ems="4"
                android:maxLength="4"
                android:id="@+id/smscode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="OTP"
                android:gravity="center"
                android:imeOptions="actionNext"/>
            <Button
                android:id="@+id/btn_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="@dimen/spacing_vv_small"
                android:text="@string/resend"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/otp_success_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done_green_500_18dp"
                android:layout_marginRight="@dimen/spacing_vv_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mobile Number Auto Verified"
                android:textSize="18sp"
                android:textColor="@color/green"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top|center_horizontal"
            android:layout_weight="6"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">
            <TextView
                android:text="@string/set_email"
                style="@style/Headings.H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Just confirm your email address before submitting"
                android:gravity="center"
                android:textColor="@color/black_38"/>
            <AutoCompleteTextView
                android:id="@+id/email"
                android:completionHint="@string/valid_email"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:ems="14"
                android:completionThreshold="1"
                android:hint="@string/error_email_input"
                android:imeOptions="actionDone"
                android:maxLength="32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/btn_submit"
        android:background="@color/primary"
        android:padding="@dimen/spacing_medium"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:text="@string/complete"
            style="@style/BoldButton"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
</RelativeLayout>