<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/spacing_vv_small"
    android:paddingBottom="@dimen/spacing_vv_small"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cover"
            android:layout_width="90dp"
            android:layout_height="144dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:scaleType="fitXY"
            android:contentDescription="@string/cover_image"
            android:src="@drawable/placeholder"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cover"
            android:layout_toLeftOf="@+id/price"
            android:textSize="16sp"
            android:textColor="@color/text" />
        <TextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cover"
            android:layout_toLeftOf="@+id/price"
            android:layout_below="@+id/title"
            android:textColor="@color/hint_text"
            android:textSize="12sp" />
        <!--<TextView-->
            <!--android:id="@+id/return_date"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toRightOf="@id/cover"-->
            <!--android:layout_toLeftOf="@+id/price"-->
            <!--android:layout_below="@+id/sub_title"-->
            <!--android:textSize="12sp"-->
            <!--android:textColor="@color/primary_light"-->
            <!--/>-->
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/price_extend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/price"
            android:textSize="14sp"
            android:textColor="@color/primary"
            android:layout_marginTop="@dimen/spacing_vv_small"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>
    <!--<LinearLayout-->
        <!--android:id="@+id/not_delivered"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/spacing_vv_small"-->
        <!--android:visibility="gone">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/test_blue"/>-->
        <TextView
            android:id="@+id/delivery_estimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_vv_small"/>
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:id="@+id/delivered"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/spacing_vv_small"-->
        <!--android:visibility="gone">-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/test_green"/>-->
        <TextView
            android:id="@+id/delivered_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_vv_small"/>
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:id="@+id/return_"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/spacing_vv_small"-->
        <!--android:visibility="gone">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Return on: "-->
            <!--android:textColor="@color/test_yellow"/>-->
        <TextView
            android:id="@+id/return_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_vv_small"/>
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_extend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/extend"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/spacing_vv_small"
            android:layout_marginBottom="@dimen/spacing_vv_small"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Return"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_vv_small"
            android:layout_marginBottom="@dimen/spacing_vv_small"/>
    </LinearLayout>
</LinearLayout>
